<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:focusableInTouchMode="true">

        <com.wty.app.uexpress.widget.common.ClearEditText
            android:id="@+id/et_expressnum"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="phone"
            android:background="@mipmap/sign_bg"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginRight="5dp"
            android:hint="@string/input_expressnum"
            android:textColorHint="@color/gray_font_3"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/img_scan"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/ic_scan"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1dp"
        android:background="@color/list_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@mipmap/sign_bg"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginRight="5dp"
            android:hint="@string/select_company"
            android:textColorHint="@color/gray_font_3"
            android:textSize="16sp"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/img_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="4dp"
            android:src="@mipmap/ic_del_search_normal"/>

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/ic_arrow"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1dp"
        android:background="@color/list_line"/>

    <com.wty.app.uexpress.widget.common.ClearEditText
        android:id="@+id/et_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@mipmap/sign_bg"
        android:singleLine="true"
        android:ellipsize="end"
        android:hint="@string/add_extra_remark"
        android:textColorHint="@color/gray_font_3"
        android:textSize="16sp"/>

</LinearLayout>
